--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,11 @@
                 "name": "next"
             }
         ],
+        "baseUrl": "./app",        
         "paths": {
-            "@/*": ["./*"]
+            "@/components/*": ["components/*"],
+            "@/hooks/*": ["hooks/*"],
+            "@/types/*": ["types/index.ts"]
         }
     },
     "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
